modify the code

--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about-us">About Us</a>
+              <a class="nav-link active" href="#about-us">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#service">Service</a>
+              <a class="nav-link active" href="#service">Service</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#testimony">Testimony</a>
+              <a class="nav-link active" href="#testimony">Testimony</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#staff">Staff</a>
+              <a class="nav-link active" href="#staff">Staff</a>
             </li>
           </ul>
         </div>
@@ -197,7 +197,7 @@
                 <img src="customer1.jpg" class="card-img-top" alt="Rona Sibarani" />
                 <div class="card-body">
                   <p class="card-text">Rona Sibarani</p>
-                  <p class="card-text">"Sebagai pelanggan, saya sangat puas dengan layanan digital consulting ini."</p>
+                  <p class="card-text">"As a customer, I am very satisfied with this digital consulting service."</p>
                 </div>
               </div>
             </div>
@@ -206,7 +206,7 @@
                 <img src="customor2.jpg" class="card-img-top" alt="Yusi Sidabutar" />
                 <div class="card-body">
                   <p class="card-text">Yusi Sidabutar</p>
-                  <p class="card-text">"Saya merasa sangat dibantu dalam mengembangkan bisnis saya melalui konsultasi digital mereka."</p>
+                  <p class="card-text">"I feel very helped in growing my business through their digital consulting."</p>
                 </div>
               </div>
             </div>
@@ -215,7 +215,7 @@
                 <img src="customer3.jpg" class="card-img-top" alt="Jura" />
                 <div class="card-body">
                   <p class="card-text">Jura</p>
-                  <p class="card-text">"Saya merasa yakin bahwa perusahaan ini akan membantu bisnis Anda tumbuh di era digital."</p>
+                  <p class="card-text">"I feel confident that this company will help your business grow in the digital age."</p>
                 </div>
               </div>
             </div>
@@ -238,9 +238,9 @@
         <h2 class="display-3" id="staff">Our Team</h2>
         <div class="row pt-4 gx-4 gy-4">
           <div class="col-md-4 text-center tim">
-            <img src="eli.jpg" class="circle" />
+            <img src="elibaru.jpg" class="circle" />
             <h4>ELI SAFITRI</h4>
-            <p>CEO One inc.</p>
+            <p>Staff One inc.</p>
             <p>
               <a href="https://www.instagram.com/eliisyafitri" class="social"><i class="fa-brands fa-instagram"></i></a>
               <a href="mailto:elisafitri964@gmail.com" class="social"><i class="fa-solid fa-envelope"></i></a>
@@ -248,7 +248,7 @@
             </p>
           </div>
           <div class="col-md-4 text-center tim">
-            <img src="louders.jpg" class="circle" />
+            <img src="loudersbaru.jpg" class="circle" />
             <h4>lOUDERS YOAKIM TELAMBANUA</h4>
             <p>Staff One inc.</p>
             <p>
@@ -258,7 +258,7 @@
             </p>
           </div>
           <div class="col-md-4 text-center tim">
-            <img src="dewi.jpg" class="circle" />
+            <img src="dewibaru.jpg" class="circle" />
             <h4>DEWI LESTARI</h4>
             <p>Staff One inc.</p>
             <p>
@@ -268,7 +268,7 @@
             </p>
           </div>
           <div class="col-md-4 text-center tim">
-            <img src="atun.jpg" class="circle" />
+            <img src="atunbaru.jpg" class="circle" />
             <h4>RADIATUN MAYA SARI</h4>
             <p>Staff One inc.</p>
             <p>
@@ -278,9 +278,9 @@
             </p>
           </div>
           <div class="col-md-4 text-center tim">
-            <img src="eli.jpg" class="circle" />
-            <h4>ELI SAFITRI</h4>
-            <p>CEO One inc.</p>
+            <img src="bryanbaru.jpg" class="circle" />
+            <h4>BRYAN AHMAD FAHREZI</h4>
+            <p>Staff One inc.</p>
             <p>
               <a href="https://www.instagram.com/username_anda" class="social"><i class="fa-brands fa-instagram"></i></a>
               <a href="mailto:alamat_email_anda" class="social"><i class="fa-solid fa-envelope"></i></a>
@@ -288,9 +288,9 @@
             </p>
           </div>
           <div class="col-md-4 text-center tim">
-            <img src="eli.jpg" class="circle" />
-            <h4>ELI SAFITRI</h4>
-            <p>CEO One inc.</p>
+            <img src="farisbaru.jpg" class="circle" />
+            <h4>MUHAMMAD FARIS</h4>
+            <p>Staff One inc.</p>
             <p>
               <a href="https://www.instagram.com/username_anda" class="social"><i class="fa-brands fa-instagram"></i></a>
               <a href="mailto:alamat_email_anda" class="social"><i class="fa-solid fa-envelope"></i></a>
